--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 
 
-*{
+* {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -15,79 +13,80 @@
 
 
 
-header{
+header {
   padding: 40px 5px;
 }
 
 
-body{
+body {
   background-color: black;
   height: 100px;
 }
 
-.toposite{
-    display: flex;
+.toposite {
+  display: flex;
 }
 
-.interface{
+.interface {
   max-width: 1200px;
   margin: 0 auto;
 }
 
-h2{
-    color: white;
-    text-align: center;
-    font-size: 28px;
-    font-weight: bold;
-    padding: 0 20px 0px 0px;
+h2 {
+  color: white;
+  text-align: center;
+  font-size: 28px;
+  font-weight: bold;
+  padding: 0 20px 0px 0px;
 }
 
-h2>span{
-    color:#ffff00;
-    font-weight: bold;
+h2>span {
+  color: #ffff00;
+  font-weight: bold;
 }
-.flex{
+
+.flex {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-header > .interface{
+header>.interface {
   display: flex;
   align-items: center;
   justify-content: space-between
 }
 
 
-header a{
+header a {
   color: rgb(126, 126, 126);
 }
 
 
-header a:hover{
+header a:hover {
   color: white;
 }
 
 
-header nav ul{
+header nav ul {
   list-style-type: none;
 }
 
 
-header nav ul li{
+header nav ul li {
   display: inline-block;
   padding: 0px 40px;
 }
 
 
-header nav ul li a{
+header nav ul li a {
   text-decoration: none;
 
 
 }
 
 
-.button button{
+.button button {
   padding: 8px 16px;
   background-color: #ffff00;
   border: none;
@@ -96,121 +95,156 @@ header nav ul li a{
   font-size: 15px;
   font-weight: 600;
   cursor: pointer;
+  transform: (1.05);
+  box-shadow: 0px 0 px 10px #ffff00;
+}
+
+.button button:hover {
+  transition: 2s;
 }
 
 
-.menu{
-  display:flex;
+.menu {
+  display: flex;
   font-size: 15px;
 }
-.img-topodosite> img {
+
+.img-topodosite>img {
   width: 490px;
   height: 270px;
-}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         '
+}
+
+'
 
 
 /* TOPO DO SITE */
 
-section.top-do-site{
-    padding: 40px 4%;
+section.top-do-site {
+  padding: 40px 4%;
 }
 
-section.top-do-site.flex{
-    align-items: center;
-    justify-content: center;
+section.top-do-site.flex {
+  align-items: center;
+  justify-content: center;
 }
 
-.txt-topodosite>h1{
-    color: white;
-    font-weight: bold;
+.txt-topodosite>h1 {
+  color: white;
+  font-weight: bold;
 }
 
-.txt-topodosite>h1 > span{
-    color: yellow;
-    font-weight: bold;
+.txt-topodosite>h1>span {
+  color: yellow;
+  font-weight: bold;
 }
 
-.txt-topodosite>p{
-    color: white;
+.txt-topodosite>p {
+  color: white;
 }
 
-.img-topodosite> img{
-    position: relative;
-    animation: flutuar 2s ease-in-out infinite alternate;
-
-}
-
-@keyframes flutuar{
-    0%{
-        top: 0;
-    }
-    100%{
-        top: 30px;
-    }
-    
-}
-
-section>.especialidades{
-    padding: 40px 4%;
-}
-
-.flex{
-    gap: 60px;
-}
-
-section>especialides-box>h3,p,i{
-    font-size: 13px;
-    color: white;
-    text-align: justify;
+.img-topodosite>img {
+  position: relative;
+  animation: flutuar 2s ease-in-out infinite alternate;
 
 }
 
-h3{
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    text-align: center;
-}
+@keyframes flutuar {
+  0% {
+    top: 0;
+  }
 
-.especialidades .especialidades-box{
-    padding: 40px;
-    border: 2px solid rgb(59, 59, 59);
-    border-radius: 10px;
-    transition: 1.5s;
-    
-}
-
-.especialidades .especialidades-box:hover{
-    transform: scale(1.04);
-    box-shadow: 0px 0px 8px white;
+  100% {
+    top: 30px;
+  }
 
 }
 
-.especialidades .especialidades-box i{
-    color:#ffff00;
-    font-size: 35px;
-    display: flex;
-    text-align: center;
-    justify-content: center;
+section>.especialidades {
+  padding: 40px 4%;
+}
+
+.flex {
+  gap: 60px;
+}
+
+section>especialides-box>h3,
+p,
+i {
+  font-size: 13px;
+  color: white;
+  text-align: justify;
+
+}
+
+h3 {
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+}
+
+.especialidades .especialidades-box {
+  padding: 40px;
+  border: 2px solid rgb(59, 59, 59);
+  border-radius: 10px;
+  transition: 1.5s;
+
+}
+
+.especialidades .especialidades-box:hover {
+  transform: scale(1.04);
+  box-shadow: 0px 0px 8px white;
+
+}
+
+.especialidades .especialidades-box i {
+  color: #ffff00;
+  font-size: 35px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 
 }
 
 @media screen and (max-width: 836px) {
 
-    .flex{
-        flex-direction: column-reverse;
-    }
-    .menu, .button{
-        display: none;
+  .flex {
+    flex-direction: column-reverse;
+  }
 
-    }
-    section>especialides-box>h3,p,i{
-        text-align: center;
-    }
-    h1{
-        text-align: center;
-    }
-    p{
-        text-align: justify;
-    }
+  .menu,
+  .button {
+    display: none;
+
+  }
+
+  section>especialides-box>h3,
+  p,
+  i {
+    text-align: center;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  p {
+    text-align: justify;
+  }
+}
+
+/* projetos */
+
+.projetos {
+  padding: 40px 4%;
+}
+
+.flex {
+  gap: 60px;
+}
+
+.projetos>projetos-box>img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
