--- a/style.css
+++ b/style.css
@@ -253,5 +253,11 @@ h3 {
     width: 330px;
     height: 220px;
     width: 100%;
+    transition: 1.1s;
     
+}
+
+.projetos-box > img:hover{
+    transform: scale(1.08);
+    box-shadow: 0px 0px 10px white;
 }
