--- a/style.css
+++ b/style.css
@@ -206,32 +206,6 @@ h3 {
 
 }
 
-@media screen and (max-width: 836px) {
-
-  .flex {
-    flex-direction: column-reverse;
-  }
-
-  .menu,
-  .button {
-    display: none;
-
-  }
-
-  section>especialides-box>h3,
-  p,
-  i {
-    text-align: center;
-  }
-
-  h1 {
-    text-align: center;
-  }
-
-  p {
-    text-align: justify;
-  }
-}
 
 /* projetos */
 
@@ -253,6 +227,7 @@ h3 {
     width: 330px;
     height: 220px;
     width: 100%;
+    
     transition: 1.1s;
     
 }
@@ -261,3 +236,54 @@ h3 {
     transform: scale(1.08);
     box-shadow: 0px 0px 10px white;
 }
+
+@media (max-width: 450px){
+   body{
+   margin: auto;
+   text-align: center;
+    
+   }
+
+   img{
+    margin: auto;
+
+   }
+   .projetos-box > img:hover{
+    display: none;
+   }
+
+   .logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   }
+}
+    
+
+@media (max-width: 836px) {
+
+    .flex {
+      flex-direction: column-reverse;
+    }
+  
+    .menu,
+    .button {
+      display: none;
+  
+    }
+  
+    section>especialides-box>h3,
+    p,
+    i {
+      text-align: center;
+    }
+  
+    h1 {
+      text-align: center;
+    }
+  
+    p {
+      text-align: justify;
+    }
+  }
+  
