--- a/style.css
+++ b/style.css
@@ -206,6 +206,80 @@ h3 {
 
 }
 
+@media (min-width: 280px) and (max-width: 450px) {
+  body {
+    margin: auto;
+    text-align: center;
+  }
+
+  img {
+    margin: auto;
+  }
+
+  .projetos-box>img:hover {
+    display: none;
+  }
+
+  .logo {
+    display: none;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .flex {
+    flex-direction: column-reverse;
+  }
+
+  .menu,
+  .button {
+    display: none;
+
+  }
+}
+
+
+@media (max-width: 836px) {
+
+  .flex {
+    flex-direction: column-reverse;
+  }
+
+  .menu,
+  .button {
+    display: none;
+
+  }
+
+  section>especialides-box>h3,
+  p,
+  i {
+    text-align: center;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  p {
+    text-align: justify;
+  }
+}
+
+
+section>especialides-box>h3,
+p,
+i {
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+p {
+  text-align: justify;
+}
+}
 
 /* projetos */
 
@@ -222,68 +296,3 @@ h3 {
   justify-content: center;
   align-items: center;
 }
-
-.projetos-box > img{
-    width: 330px;
-    height: 220px;
-    width: 100%;
-    
-    transition: 1.1s;
-    
-}
-
-.projetos-box > img:hover{
-    transform: scale(1.08);
-    box-shadow: 0px 0px 10px white;
-}
-
-@media (max-width: 450px){
-   body{
-   margin: auto;
-   text-align: center;
-    
-   }
-
-   img{
-    margin: auto;
-
-   }
-   .projetos-box > img:hover{
-    display: none;
-   }
-
-   .logo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   }
-}
-    
-
-@media (max-width: 836px) {
-
-    .flex {
-      flex-direction: column-reverse;
-    }
-  
-    .menu,
-    .button {
-      display: none;
-  
-    }
-  
-    section>especialides-box>h3,
-    p,
-    i {
-      text-align: center;
-    }
-  
-    h1 {
-      text-align: center;
-    }
-  
-    p {
-      text-align: justify;
-    }
-  }
-  
