--- a/style.css
+++ b/style.css
@@ -206,6 +206,34 @@ h3 {
 
 }
 
+.projetos {
+  padding: 40px 4%;
+}
+
+.flex {
+  gap: 60px;
+}
+
+.projetos>projetos-box>img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.projetos-box>img {
+  width: 330px;
+  height: 220px;
+  width: 100%;
+
+  transition: 1.1s;
+
+}
+
+.projetos-box>img:hover {
+  transform: scale(1.08);
+  box-shadow: 0px 0px 10px white;
+}
+
 @media (min-width: 280px) and (max-width: 450px) {
   body {
     margin: auto;
