--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ h3 {
 
 .especialidades .especialidades-box:hover {
   transform: scale(1.04);
-  box-shadow: 0px 0px 8px white;
+
 
 }
 
@@ -230,8 +230,7 @@ h3 {
 }
 
 .projetos-box>img:hover {
-  transform: scale(1.08);
-  box-shadow: 0px 0px 10px white;
+
 }
 
 @media (min-width: 280px) and (max-width: 450px) {
@@ -266,7 +265,7 @@ h3 {
 }
 
 
-@media (max-width: 836px) {
+@media (max-width: 930px) {
 
   .flex {
     flex-direction: column-reverse;
@@ -290,6 +289,11 @@ h3 {
 
   p {
     text-align: justify;
+  }
+  .logo img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
