--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
@@ -115,7 +114,7 @@ header nav ul li a {
   height: 270px;
 }
 
-
+'
 
 
 /* TOPO DO SITE */
@@ -130,7 +129,6 @@ section.top-do-site.flex {
 }
 
 .txt-topodosite>h1 {
-    padding: 20px;
   color: white;
   font-weight: bold;
 }
@@ -142,10 +140,6 @@ section.top-do-site.flex {
 
 .txt-topodosite>p {
   color: white;
-}
-
-p{
-    margin-left: 30%;
 }
 
 .img-topodosite>img {
@@ -236,14 +230,19 @@ h3 {
 }
 
 .projetos-box>img:hover {
-  transform: scale(1.05);
- 
+  transform: scale(1.08);
+  box-shadow: 0px 0px 10px white;
 }
 
 @media (min-width: 280px) and (max-width: 450px) {
   body {
     margin: auto;
     text-align: center;
+  }
+
+  .especialidades .especialidades-box:hover {
+    transform: none;
+    box-shadow: none;
   }
 
   img {
@@ -254,7 +253,7 @@ h3 {
     display: none;
   }
 
-  .logo img{
+  .logo {
     display: none;
     align-items: center;
     justify-content: center;
@@ -272,9 +271,7 @@ h3 {
 }
 
 
-@media (max-width: 930px) {
-
-    
+@media (max-width: 836px) {
 
   .flex {
     flex-direction: column-reverse;
